<resources>
    <string name="app_name">Share</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="str_Home">Home</string>
    <string name="str_Learn">Learn</string>
    <string name="str_Television">TV</string>
    <string name="str_Stock">Trading</string>
    <string name="str_News">News</string>
    <string name="str_Logo">LOGO</string>
    <string name="str_Candle">Candle</string>
    <string name="str_Pattern">Pattern</string>
    <string name="str_Indicators">Indicators</string>
    <string name="str_Strategy">Strategy</string>
    <string name="str_Tutorials">Tutorials</string>
    <string name="str_Markets">Markets</string>
    <string name="str_Stocks">Stocks</string>
    <string name="str_Crypto">Crypto</string>
    <string name="str_IPO">IPO</string>
    <string name="str_NFT">NFT</string>
    <string name="str_Trading">Trading</string>
    <string name="str_About">About</string>
    <string name="str_Policy">Privacy Policy</string>
    <string name="str_TermsandCondition"><![CDATA[Terms & Condition]]></string>
    <string name="str_homeFragment">Home Fragment</string>
    <string name="dialog_message">Do you want to exit?</string>
    <string name="openaccount">demo</string>
    <string name="choose">demo</string>
    <string name="title_activity_help">HelpActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="how_to_apply">How to Apply</string>
    <string name="apply">Apply</string>
</resources>