<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.LearnFragment">

    <!--<WebView
        android:id="@+id/webview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
-->
        <HorizontalScrollView
            android:id="@+id/horizontalScrollView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/_1sdp"
                android:background="@drawable/tvshape"
                android:gravity="center"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/tvCandle"
                    android:layout_width="@dimen/_70sdp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:background="@drawable/tvshape"
                    android:backgroundTint="@color/light_gray"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/str_Candle"
                    android:textAlignment="center"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/tvPattern"
                    android:layout_width="@dimen/_75sdp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:background="@drawable/tvshape"
                    android:backgroundTint="@color/light_gray"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/str_Pattern"
                    android:textAlignment="center"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/tvIndicator"
                    android:layout_width="@dimen/_90sdp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:background="@drawable/tvshape"
                    android:backgroundTint="@color/light_gray"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/str_Indicators"
                    android:textAlignment="center"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/tvStrategy"
                    android:layout_width="@dimen/_85sdp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:background="@drawable/tvshape"
                    android:backgroundTint="@color/light_gray"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/str_Strategy"
                    android:textAlignment="center"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/tvTutorials"
                    android:layout_width="@dimen/_85sdp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:background="@drawable/tvshape"
                    android:backgroundTint="@color/light_gray"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/str_Tutorials"
                    android:textAlignment="center"
                    android:textColor="@color/white" />
            </LinearLayout>
        </HorizontalScrollView>


    <FrameLayout
        android:id="@+id/framelayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView" />


</androidx.constraintlayout.widget.ConstraintLayout>